# axum-server

./: .gitignore  Cargo.toml  rustfmt.toml
backend-macros/: Cargo.toml
backend-macros/src/: dto.rs  into_search_query.rs  lib.rs
mongoose/: Cargo.toml
mongoose/src/: lib.rs  snake_to_camel.rs
mongoose/src/into_doc/: from_enum.rs  from_struct.rs  mod.rs
mongoose/src/model/: builder.rs  dao.rs  mod.rs
src/: dao.rs  error.rs  main.rs  sample-env.txt  web.rs
src/dao/: mod.rs  mongo.rs  storage.rs
src/db/: aws.rs  mongo.rs
src/extractors/: file_query.rs  folder_query.rs  mod.rs  param.rs  user_query.rs
src/handler/: mod.rs
src/handler/auth/: login.rs  logout.rs  refresh.rs
src/handler/file/: content.rs  create.rs  delete.rs  get.rs  mod.rs  restore.rs  update.rs  version.rs
src/handler/folder/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/handler/user/: create.rs  delete.rs  get.rs  profile.rs  update.rs
src/helper/: make_error.rs  mod.rs  print_validation.rs
src/helper/auth/: cookie.rs  decode.rs  encode.rs  mod.rs
src/model/: file.rs  file_accessor.rs  file_collaborator.rs  file_version.rs  folder.rs  folder_accessor.rs  folder_collaborator.rs  mod.rs  user.rs
src/model/populated/: file.rs  folder.rs  mod.rs  user.rs
src/repo/: mod.rs
src/repo/file/: create.rs  delete.rs  exists.rs  mod.rs  replace.rs  update.rs
src/repo/file_version/: create.rs  (+3 more)
src/response/: file.rs  folder.rs  user.rs
src/routes/: auth.rs  file.rs  folder.rs  mod.rs  user.rs
src/service/: mod.rs
src/services/: mod.rs
src/validation/: file.rs  mod.rs
(+141 files in other folders)
