[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
futures-util = "0.3.26"

# Backend server
axum = { version = "0.6.4", features = [
	"json",
	"query",
	"headers",
	"multipart",
] }
axum-extra = { version = "0.5.0", features = ["cookie"] }

# Database
mongodb = "2.3.1"
rust-s3 = "0.32.3"

# Credentials
dotenv = "0.15.0"

# Data posting
mime_guess = "2.0.4"

# User Authentication
jsonwebtoken = "8.2.0"
cookie = "0.17.0"

# Validation
validator = { version = "0.16.0", features = ["derive"] }
fancy-regex = "0.11.0"

# Modelling
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"

# Error handling
thiserror = "1.0.38"
